--- a/socialmedia/templates/pages/profile.html
+++ b/socialmedia/templates/pages/profile.html
@@ -108,34 +108,35 @@
                   {% endif %}
                   <div class="details">
                     <p>
-                      <a href="{% url 'social:detail' post.id %}">
-                        <strong>{{ post.user.username }}</strong> {{ post.text }}
-                      </a>
+                      <strong>{{ post.user.username }}</strong> {{ post.text }}
                     </p>
-                    <div>
+                    <div class="d-flex align-items-center">
                       <button class="btn btn-light">
                         <i class="far fa-thumbs-up"></i> Like
                       </button>
-                      <button class="btn btn-light">
+                      <a href="{% url 'social:detail' post.id %}"
+                         class="btn btn-light text-dark ml-2">
                         <i class="far fa-comment"></i> Comment
-                      </button>
+                      </a>
                     </div>
                   </div>
                 </div>
-                <div class="comments mt-2">
-                  {% for comment in post.comments.all %}
-                    <div class="comment mb-2 d-flex">
-                      <img src="{{ comment.user.profile.profile_image.url }}"
-                           alt="Profile Picture"
-                           class="rounded-circle comment-img" />
-                      <div class="comment-details ml-2">
-                        <p class="mb-1">
-                          <strong>{{ comment.user.username }}</strong> {{ comment.text }}
-                        </p>
-                        <small class="text-muted">{{ comment.created|date:"M d, Y" }}</small>
+                <div id="comments-{{ post.id }}" class="comments mt-2">
+                  {% with comments=post.comments.all|slice:":2" %}
+                    {% for comment in comments %}
+                      <div class="comment mb-2 d-flex">
+                        <img src="{{ comment.user.profile.profile_image.url }}"
+                             alt="Profile Picture"
+                             class="rounded-circle comment-img" />
+                        <div class="comment-details ml-2">
+                          <p class="mb-1">
+                            <strong>{{ comment.user.username }}</strong> {{ comment.text }}
+                          </p>
+                          <small class="text-muted">{{ comment.created|date:"M d, Y" }}</small>
+                        </div>
                       </div>
-                    </div>
-                  {% endfor %}
+                    {% endfor %}
+                  {% endwith %}
                   <form class="mt-3">
                     <input type="text" class="form-control" placeholder="Post a comment" />
                   </form>
@@ -174,17 +175,20 @@
         </div>
       </div>
     </div>
-    {% if latest_post_list %}
-      <ul>
-        {% for post in latest_post_list %}
-          <li>
-            <a href="{% url 'social:detail' post.id %}">{{ post.text }}</a>
-          </li>
-        {% endfor %}
-      </ul>
-    {% else %}
-      <p>No posts are available.</p>
-    {% endif %}
+    <!-- Hide the bottom posts list -->
+    <div class="hidden">
+      {% if latest_post_list %}
+        <ul>
+          {% for post in latest_post_list %}
+            <li>
+              <a href="{% url 'social:detail' post.id %}">{{ post.text }}</a>
+            </li>
+          {% endfor %}
+        </ul>
+      {% else %}
+        <p>No posts are available.</p>
+      {% endif %}
+    </div>
     <!-- Footer -->
     <footer class="text-center text-lg-start bg-light text-muted mt-auto">
       <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
