--- a/socialmedia/templates/menu/custom_menu.html
+++ b/socialmedia/templates/menu/custom_menu.html
@@ -14,7 +14,7 @@
     {% if child.get_menu_title == "Home" %}
       <div class="dropdown-menu" aria-labelledby="navbarDropdown">
         {% if request.user.is_authenticated %}
-          <a class="dropdown-item" href="{% url 'profile' %}">Profile</a>
+          <a class="dropdown-item" href="{% url 'social:index' %}">Profile</a>
         {% else %}
           <a class="dropdown-item disabled" href="#">Profile (Login Required)</a>
         {% endif %}
