--- a/socialmedia/templates/pages/post_detail.html
+++ b/socialmedia/templates/pages/post_detail.html
@@ -4,96 +4,137 @@
 <html lang="en">
   <head>
     {% render_block "css" %}
-    <!-- Required meta tags -->
-    <meta charset="utf-8" />
+    <meta charset="UTF-8" />
     <meta name="viewport"
           content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <!-- Bootstrap CSS -->
+    <!-- Font Awesome -->
     <link rel="stylesheet"
-          href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css"
-          integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
-          crossorigin="anonymous" />
-    <!-- Font Awesome CSS -->
+          href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
+    <!-- Google Fonts Roboto -->
     <link rel="stylesheet"
-          href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
-          integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm"
-          crossorigin="anonymous" />
-    <!-- Custom CSS -->
-    <link rel="stylesheet" href="{% static 'css/styles.css' %}" />
+          href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap" />
+    <!-- MDB -->
+    <link rel="stylesheet"
+          href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.10.2/mdb.min.css" />
+    <link rel="stylesheet" href="{% static 'css/profile.css' %}" />
     <title>Post Detail - Social Media App</title>
   </head>
   <body>
     {% cms_toolbar %}
     {% render_block "js" %}
-    <!-- Navigation Bar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light custom-navbar">
-      <a class="navbar-brand" href="{% url 'home' %}">SocialMediaApp</a>
-      <button class="navbar-toggler"
-              type="button"
-              data-toggle="collapse"
-              data-target="#navbarNav"
-              aria-controls="navbarNav"
-              aria-expanded="false"
-              aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav mr-auto">
-          {% show_menu 0 100 100 100 "menu/custom_menu.html" %}
-        </ul>
-        <form class="form-inline my-2 my-lg-0">
-          <input class="form-control mr-sm-2"
-                 type="search"
-                 placeholder="Search for username..."
-                 aria-label="Search" />
-        </form>
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" href="#"><i class="fas fa-comments"></i></a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle"
-               href="#"
-               id="navbarDropdown"
-               role="button"
-               data-toggle="dropdown"
-               aria-haspopup="true"
-               aria-expanded="false">
-              <img src="{% static 'images/profile-placeholder.png' %}"
-                   alt="Profile"
-                   class="rounded-circle profile-img" />
-            </a>
-            <div class="dropdown-menu dropdown-menu-right"
-                 aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="#">Profile</a>
-              <a class="dropdown-item" href="#">Settings</a>
-              <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="#">Logout</a>
+    <header>
+      <nav class="navbar navbar-expand-lg navbar-light bg-body-tertiary">
+        <div class="container-fluid">
+          <button class="navbar-toggler"
+                  type="button"
+                  data-mdb-toggle="collapse"
+                  data-mdb-target="#navbarSupportedContent"
+                  aria-controls="navbarSupportedContent"
+                  aria-expanded="false"
+                  aria-label="Toggle navigation">
+            <i class="fas fa-bars"></i>
+          </button>
+          <div class="container">
+            <div class="row w-100">
+              <div class="col-md-1"></div>
+              <div class="col-md-2">
+                <a class="navbar-brand" href="{% url 'social:index' %}">SocialMediaApp</a>
+              </div>
+              <div class="col-md-4">
+                <form class="d-flex input-group w-auto">
+                  <input type="search"
+                         class="form-control rounded"
+                         placeholder="Search"
+                         aria-label="Search"
+                         aria-describedby="search-addon" />
+                  <span class="input-group-text border-0" id="search-addon">
+                    <i class="fas fa-search"></i>
+                  </span>
+                </form>
+              </div>
+              <div class="col-md-2">
+                <button id="uploadBtn" class="btn btn-primary my-2 my-sm-0" type="button">Upload Pics / Videos</button>
+              </div>
+              <div class="col-md-3">
+                <ul class="navbar-nav justify-content-center">
+                  <li class="nav-item me-3 me-lg-0">
+                    <a class="nav-link" href="{% url 'home' %}">
+                      <i class="fas fa-home text-dark"></i>
+                    </a>
+                  </li>
+                  <li class="nav-item me-3 me-lg-0">
+                    <a class="nav-link" href="{% url 'about' %}">
+                      <i class="fas fa-circle-info text-dark"></i>
+                    </a>
+                  </li>
+                  <li class="nav-item me-3 me-lg-0">
+                    <a class="nav-link" href="#">
+                      <i class="fas fa-comment text-dark"></i>
+                    </a>
+                  </li>
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle d-flex align-items-center"
+                       href="#"
+                       id="navbarDropdownMenuLink"
+                       role="button"
+                       data-mdb-toggle="dropdown"
+                       aria-expanded="false">
+                      <img src="https://mdbcdn.b-cdn.net/img/Photos/Avatars/img (31).webp"
+                           class="rounded-circle"
+                           height="22"
+                           loading="lazy"
+                           alt="User Avatar" />
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                      <li>
+                        <a class="dropdown-item" href="#">My profile</a>
+                      </li>
+                      <li>
+                        <a class="dropdown-item" href="#">Settings</a>
+                      </li>
+                      <li>
+                        <a class="dropdown-item" href="#">Logout</a>
+                      </li>
+                    </ul>
+                  </li>
+                </ul>
+              </div>
             </div>
-          </li>
-        </ul>
-      </div>
-    </nav>
+          </div>
+        </div>
+      </nav>
+    </header>
     <!-- Post Detail Content -->
     <div class="container my-5">
       <div class="row">
         <div class="col-lg-8">
           <div class="post-content bg-white p-4 rounded shadow-sm">
             <div class="post mb-4">
+              <div class="d-flex align-items-center mb-3">
+                <img src="{{ post_detail.user.profile.profile_image.url }}"
+                     class="rounded-circle"
+                     height="40"
+                     alt="User Avatar" />
+                <strong class="ml-2">{{ post_detail.user.username }}</strong>
+              </div>
               {% if post_detail.image %}
                 <img src="{{ post_detail.image.url }}" alt="Post Image" class="img-fluid" />
               {% elif post_detail.video %}
-                <video controls class="img-fluid">
+                <video controls class="img-fluid mt-3">
                   <source src="{{ post_detail.video.url }}" type="video/mp4" />
                   Your browser does not support the video tag.
                 </video>
               {% endif %}
               <div class="details mt-3">
-                <h4>{{ post_detail.user.username }}</h4>
-                <p>{{ post_detail.text }}</p>
-                <button class="btn btn-light">
-                  <i class="far fa-thumbs-up"></i> Like
-                </button>
+                <p class="mt-3">{{ post_detail.text }}</p>
+                <div class="d-flex justify-content-between mt-2">
+                  <div>
+                    <button class="btn btn-light">
+                      <i class="far fa-thumbs-up"></i> Like
+                    </button>
+                  </div>
+                  <small class="text-muted">Liked by <strong>Erik</strong> and <strong>500,500</strong> others</small>
+                </div>
               </div>
             </div>
             <div class="comments mt-2">
@@ -112,8 +153,13 @@
               {% endfor %}
               <form method="post" class="mt-3">
                 {% csrf_token %}
-                {{ comment_form.as_p }}
-                <button type="submit" class="btn btn-primary">Post Comment</button>
+                <div class="d-flex comment-form">
+                  <input type="text"
+                         name="text"
+                         class="form-control"
+                         placeholder="Leave a comment" />
+                  <button type="submit" class="btn btn-primary ml-2">Post</button>
+                </div>
               </form>
             </div>
           </div>
@@ -121,15 +167,8 @@
       </div>
     </div>
     <!-- Optional JavaScript -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-            crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js"
-            integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-            crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js"
-            integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-            crossorigin="anonymous"></script>
+    <script type="text/javascript"
+            src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.10.2/mdb.min.js"></script>
     <script>
       $(document).ready(function() {
         $('.dropdown-toggle-icon').click(function(event) {
