--- a/socialmedia/templates/pages/profile.html
+++ b/socialmedia/templates/pages/profile.html
@@ -135,7 +135,7 @@
                 </div>
                 <button type="submit" class="btn btn-primary">Create Post</button>
               </form>
-              {% for post, comments in posts_with_comments %}
+              {% for post, comments, last_liked_user in posts_with_comments %}
                 <div class="post mt-4 p-3 bg-light rounded">
                   <div class="d-flex align-items-center">
                     <img src="{{ post.user.profile.profile_image.url }}"
@@ -166,7 +166,7 @@
                     <p class="mt-3">{{ post.text }}</p>
                     <div class="d-flex justify-content-between mt-2">
                       <div>
-                        <button class="btn btn-light">
+                        <button class="btn btn-light like-btn" data-post-id="{{ post.id }}">
                           <i class="far fa-thumbs-up"></i> Like
                         </button>
                         <a href="{% url 'social:detail' post.id %}"
@@ -174,7 +174,9 @@
                           <i class="far fa-comment"></i> Comment
                         </a>
                       </div>
-                      <small class="text-muted">Liked by <strong>Erik</strong> and <strong>500,500</strong> others</small>
+                      <small class="text-muted">
+                        Liked by <strong id="last-liked-{{ post.id }}">{{ last_liked_user }}</strong> and <strong id="likes-count-{{ post.id }}">{{ post.likes.count }}</strong> others
+                      </small>
                     </div>
                   </div>
                   <div id="comments-{{ post.id }}" class="comments mt-3">
