--- a/socialmedia/templates/pages/profile.html
+++ b/socialmedia/templates/pages/profile.html
@@ -80,18 +80,26 @@
                        role="button"
                        data-mdb-toggle="dropdown"
                        aria-expanded="false">
-                      <img src="https://mdbcdn.b-cdn.net/img/Photos/Avatars/img (31).webp"
-                           class="rounded-circle"
-                           height="22"
-                           loading="lazy"
-                           alt="User Avatar" />
+                      {% if user.profile.profile_image %}
+                        <img src="{{ user.profile.profile_image.url }}"
+                             class="rounded-circle"
+                             height="22"
+                             loading="lazy"
+                             alt="User Avatar" />
+                      {% else %}
+                        <img src="https://via.placeholder.com/150"
+                             class="rounded-circle"
+                             height="22"
+                             loading="lazy"
+                             alt="User Avatar" />
+                      {% endif %}
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                       <li>
                         <a class="dropdown-item" href="#">My profile</a>
                       </li>
                       <li>
-                        <a class="dropdown-item" href="#">Settings</a>
+                        <a class="dropdown-item" href="{% url 'social:settings' %}">Settings</a>
                       </li>
                       <li>
                         <a class="dropdown-item" href="#">Logout</a>
@@ -138,10 +146,17 @@
               {% for post, comments, last_liked_user in posts_with_comments %}
                 <div class="post mt-4 p-3 bg-light rounded">
                   <div class="d-flex align-items-center">
-                    <img src="{{ post.user.profile.profile_image.url }}"
-                         class="rounded-circle"
-                         height="40"
-                         alt="User Avatar" />
+                    {% if post.user.profile.profile_image %}
+                      <img src="{{ post.user.profile.profile_image.url }}"
+                           class="rounded-circle"
+                           height="40"
+                           alt="User Avatar" />
+                    {% else %}
+                      <img src="https://via.placeholder.com/150"
+                           class="rounded-circle"
+                           height="40"
+                           alt="User Avatar" />
+                    {% endif %}
                     <strong class="ml-2">{{ post.user.username }}</strong>
                   </div>
                   <div class="mt-3">
@@ -182,10 +197,17 @@
                   <div id="comments-{{ post.id }}" class="comments mt-3">
                     {% for comment in comments %}
                       <div class="comment mb-2 d-flex">
-                        <img src="{{ comment.user.profile.profile_image.url }}"
-                             alt="Profile Picture"
-                             class="rounded-circle comment-img"
-                             height="30" />
+                        {% if comment.user.profile.profile_image %}
+                          <img src="{{ comment.user.profile.profile_image.url }}"
+                               alt="Profile Picture"
+                               class="rounded-circle comment-img"
+                               height="30" />
+                        {% else %}
+                          <img src="https://via.placeholder.com/150"
+                               alt="Profile Picture"
+                               class="rounded-circle comment-img"
+                               height="30" />
+                        {% endif %}
                         <div class="comment-details ml-2">
                           <p class="mb-1">
                             <strong>{{ comment.user.username }}</strong> {{ comment.text }}
