--- a/socialmedia/templates/pages/profile.html
+++ b/socialmedia/templates/pages/profile.html
@@ -93,6 +93,7 @@
                              loading="lazy"
                              alt="User Avatar" />
                       {% endif %}
+                      <span class="ms-2">{{ user.username }}</span>
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                       <li>
@@ -102,7 +103,7 @@
                         <a class="dropdown-item" href="{% url 'social:settings' %}">Settings</a>
                       </li>
                       <li>
-                        <a class="dropdown-item" href="#">Logout</a>
+                        <a class="dropdown-item" href="{% url 'social:logout' %}">Logout</a>
                       </li>
                     </ul>
                   </li>
@@ -238,20 +239,29 @@
             <section class="mt-3 suggestions-section">
               <div class="row mb-3">
                 <div class="col-md-3">
-                  <img src="https://mdbcdn.b-cdn.net/img/Photos/Avatars/img (31).webp"
-                       class="rounded-circle"
-                       height="50"
-                       alt="User Avatar" />
+                  {% if user.profile.profile_image %}
+                    <img src="{{ user.profile.profile_image.url }}"
+                         class="rounded-circle"
+                         height="50"
+                         alt="User Avatar" />
+                  {% else %}
+                    <img src="https://via.placeholder.com/150"
+                         class="rounded-circle"
+                         height="50"
+                         alt="User Avatar" />
+                  {% endif %}
                 </div>
                 <div class="col-md-9">
                   <ul class="ml-0 pl-1 mt-1 list-unstyled">
                     <li>
                       <p class="ml-3 text-dark mb-0 mt-1">
-                        <strong>erikmirkovic</strong>
+                        <strong>{{ user.username }}</strong>
                       </p>
                     </li>
                     <li>
-                      <span class="ml-3 text-dark">Erik Mirković</span>
+                      {% if user.profile.first_name or user.profile.last_name %}
+                        <span class="ml-3 text-dark">{{ user.profile.first_name }} {{ user.profile.last_name }}</span>
+                      {% endif %}
                     </li>
                   </ul>
                 </div>
@@ -260,62 +270,29 @@
                 <small>Suggestions for you</small>
                 <span class="text-primary">See All</span>
               </div>
-              <div class="suggestion-item">
-                <img src="https://mdbcdn.b-cdn.net/img/Photos/Avatars/img (31).webp"
-                     class="rounded-circle"
-                     height="40"
-                     alt="User Avatar" />
-                <div class="suggestion-info">
-                  <small><strong>dorijanzufic</strong></small>
-                  <br />
-                  <small>Followed by john_1 +10 more</small>
+              {% for suggestion in suggestions %}
+                <div class="suggestion-item">
+                  {% if suggestion.profile.profile_image %}
+                    <img src="{{ suggestion.profile.profile_image.url }}"
+                         class="rounded-circle"
+                         height="40"
+                         alt="User Avatar" />
+                  {% else %}
+                    <img src="https://via.placeholder.com/150"
+                         class="rounded-circle"
+                         height="40"
+                         alt="User Avatar" />
+                  {% endif %}
+                  <div class="suggestion-info">
+                    <small><strong>{{ suggestion.username }}</strong></small>
+                    <br />
+                    <small>Followed by {{ suggestion.followers.first.username }} +10 more</small>
+                  </div>
+                  <div class="follow-text">
+                    <small>Follow</small>
+                  </div>
                 </div>
-                <div class="follow-text">
-                  <small>Follow</small>
-                </div>
-              </div>
-              <div class="suggestion-item">
-                <img src="https://mdbcdn.b-cdn.net/img/Photos/Avatars/img (31).webp"
-                     class="rounded-circle"
-                     height="40"
-                     alt="User Avatar" />
-                <div class="suggestion-info">
-                  <small><strong>mateobencic</strong></small>
-                  <br />
-                  <small>Followed by john_1 +10 more</small>
-                </div>
-                <div class="follow-text">
-                  <small>Follow</small>
-                </div>
-              </div>
-              <div class="suggestion-item">
-                <img src="https://mdbcdn.b-cdn.net/img/Photos/Avatars/img (31).webp"
-                     class="rounded-circle"
-                     height="40"
-                     alt="User Avatar" />
-                <div class="suggestion-info">
-                  <small><strong>davidboca</strong></small>
-                  <br />
-                  <small>Followed by john_1 +10 more</small>
-                </div>
-                <div class="follow-text">
-                  <small>Follow</small>
-                </div>
-              </div>
-              <div class="suggestion-item">
-                <img src="https://mdbcdn.b-cdn.net/img/Photos/Avatars/img (31).webp"
-                     class="rounded-circle"
-                     height="40"
-                     alt="User Avatar" />
-                <div class="suggestion-info">
-                  <small><strong>danielbencic</strong></small>
-                  <br />
-                  <small>Followed by john_1 +10 more</small>
-                </div>
-                <div class="follow-text">
-                  <small>Follow</small>
-                </div>
-              </div>
+              {% endfor %}
             </section>
           </div>
         </div>
