--- a/socialmedia/templates/pages/settings.html
+++ b/socialmedia/templates/pages/settings.html
@@ -29,6 +29,16 @@
           {{ form.location }}
           {% if form.location.errors %}<div class="text-danger">{{ form.location.errors }}</div>{% endif %}
         </div>
+        <div class="form-group">
+          <label for="first_name">First Name</label>
+          {{ form.first_name }}
+          {% if form.first_name.errors %}<div class="text-danger">{{ form.first_name.errors }}</div>{% endif %}
+        </div>
+        <div class="form-group">
+          <label for="last_name">Last Name</label>
+          {{ form.last_name }}
+          {% if form.last_name.errors %}<div class="text-danger">{{ form.last_name.errors }}</div>{% endif %}
+        </div>
         <div class="actions">
           <button type="submit" class="btn btn-primary">Save</button>
           <button href="{% url 'social:index' %}" class="btn btn-secondary">Cancel</button>
