--- a/socialmedia/static/css/my_profile.css
+++ b/socialmedia/static/css/my_profile.css
@@ -61,6 +61,7 @@ body {
 
 .profile-stats span {
     font-size: 18px;
+    cursor: pointer;
 }
 
 .profile-actions {
@@ -181,4 +182,103 @@ body {
 .following:hover {
     background-color: #5a6268;
     border-color: #545b62;
+}
+
+/* Additional styles for Followers and Following modals */
+#followersModal, #followingModal {
+    display: none;
+    position: fixed;
+    z-index: 1000;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.8);
+    align-items: center;
+    justify-content: center;
+}
+
+#followersModal .modal-content, #followingModal .modal-content {
+    background-color: #fefefe;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+    max-width: 500px;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    height: 70%;
+}
+
+#followersModal .modal-content .close, #followingModal .modal-content .close {
+    position: absolute;
+    top: 10px;
+    right: 25px;
+    color: #000;
+    font-size: 35px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+#followersModal .modal-content .close:hover, #followingModal .modal-content .close:hover {
+    color: #555;
+}
+
+#followersModal .modal-content input, #followingModal .modal-content input {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 10px;
+    font-size: 16px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+
+#followersList, #followingList {
+    flex-grow: 1;
+    overflow-y: auto;
+}
+
+.follower-item, .following-item {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px;
+    border-bottom: 1px solid #ccc;
+}
+
+.follower-item img, .following-item img {
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    margin-right: 10px;
+}
+
+.follower-item:hover, .following-item:hover {
+    background-color: #f1f1f1;
+}
+
+.follower-info, .following-info {
+    display: flex;
+    align-items: center;
+}
+
+.follower-info div, .following-info div {
+    display: flex;
+    flex-direction: column;
+}
+
+.follower-info button, .following-info button {
+    background-color: #dc3545;
+    border-color: #dc3545;
+    color: #fff;
+    padding: 5px 10px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.follower-info button:hover, .following-info button:hover {
+    background-color: #c82333;
+    border-color: #bd2130;
 }
